# self-sentry

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
src/self_sentry/: __init__.py  _client.py  _config.py  _decorator.py  _email.py  _formatter.py  _hooks.py  _watchdog.py
tests/: conftest.py  test_client.py  test_config.py  test_decorator.py  test_email.py  test_hooks.py  test_watchdog.py
tests/smoke/: send_real.py
