[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "self-sentry"
version = "0.2.0"
description = "Sentry-style Slack error reporting for Python — Lambda + servers + scripts."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Ad-Leverage" }]
keywords = ["slack", "error-reporting", "lambda", "sentry"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "slack-sdk>=3.21,<4",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-asyncio>=0.23",
    "requests-mock>=1.11",
    "ruff>=0.4",
    "mypy>=1.8",
]

[project.urls]
Homepage = "https://github.com/Ad-Leverage/self-sentry"
Issues = "https://github.com/Ad-Leverage/self-sentry/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/self_sentry"]

[tool.hatch.build.targets.sdist]
include = ["src/self_sentry", "README.md", "pyproject.toml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
strict = false
warn_unused_ignores = true
warn_redundant_casts = true
files = ["src/self_sentry"]
